tests/baselines/reference/parserRegularExpression1.errors.txt
parserRegularExpression1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.


==== parserRegularExpression1.ts (1 errors) ====
    return /(#?-?\d*\.\d\w*%?)|(@?#?[\w-?]+%?)/g;
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.